[Add]cron setting

--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -11,4 +11,4 @@ jobs:
     timeout-minutes: 10
     steps:
       - name: php
-        run: php /public/get_file.php
+        run: php ./public/get_file.php
