--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -2,7 +2,7 @@ name: Scheduled build
 
 on:
   schedule:
-    - cron: '0/5 * * * *'
+    - cron: '0 18 * * *'
 
 jobs:
   build:
@@ -11,4 +11,4 @@ jobs:
     timeout-minutes: 10
     steps:
       - name: php
-        run: echo "Hello World"
+        run: php get_file.php
