--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -13,9 +13,9 @@ jobs:
         php: [ '5.4', '5.5', '5.6', '7.1', '7.2', '7.3', '7.3.3' ]
     name: PHP ${{ matrix.php }} sample
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@main
       - name: Setup PHP
-        uses: nanasess/setup-php@master
+        uses: nanasess/setup-php@main
         with:
           php-version: ${{ matrix.php }}
       - run: php get_file.php
