--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -2,20 +2,24 @@ name: Scheduled build
 
 on:
   schedule:
-    - cron: '0 18 * * *'
+    - cron: '0/5 * * * *'
 
 jobs:
-  build:
+  run:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ ubuntu-18.04, windows-2019 ]
-        php: [ '5.4', '5.5', '5.6', '7.1', '7.2', '7.3', '7.3.3' ]
-    name: PHP ${{ matrix.php }} sample
+        operating-system: [ubuntu-latest, windows-latest, macOS-latest]
+        php-versions: ['7.2', '7.3']
+    name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
     steps:
-      - uses: actions/checkout@master
-      - name: Setup PHP
-        uses: nanasess/setup-php@master
-        with:
-          php-version: ${{ matrix.php }}
-      - run: php get_file.php
+    -name: Checkout
+      uses: actions/checkout@v2
+    -name: Install PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.php-versions }}
+        extensions: intl #optional
+        ini-values: "post_max_size=256M" #optional
+    -name: Check PHP Version
+      run: php get_file.php
