--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -14,9 +14,9 @@ jobs:
     name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
     steps:
     -name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@v2
     -name: Install PHP
-      uses: shivammathur/setup-php@main
+      uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php-versions }}
         extensions: intl #optional
