--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -13,8 +13,7 @@ jobs:
         php-versions: ['7.2', '7.3']
     name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
     steps:
-    -name: Checkout
-     uses: actions/checkout@v2
+    -uses: actions/checkout@v2
     -name: Install PHP
      uses: shivammathur/setup-php@v2
      with:
