--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -5,7 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-php@v2
+      - uses: shivammathur/setup-php@v2
       - run: npm install -g bats
       - run: php -v
-      
