--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -7,3 +7,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: shivammathur/setup-php@v2
       - run: php -v
+      - run: php get_file.php
