--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -7,5 +7,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: shivammathur/setup-php@v2
       - run: php -v
-      - run: echo $_SERVER['DOCUMENT_ROOT']
+      - run: php echo $_SERVER['DOCUMENT_ROOT']
       - run: php get_file.php
