--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -1,10 +1,14 @@
-name: learn-github-actions
-on: [push]
+name: Action Sample
+
+on:
+  push:
+    branches: 
+      - master
+  workflow_dispatch:
+
 jobs:
-  check-bats-version:
+  print-hello-world:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: shivammathur/setup-php@v2
-      - run: php -v
-      - run: php get_file.php
+      - name: execute echo command
+        run: echo "Hello World!!!!"
