--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -1,14 +1,11 @@
-name: Action Sample
-
-on:
-  push:
-    branches: 
-      - master
-  workflow_dispatch:
-
+name: learn-github-actions
+on: [push]
 jobs:
-  print-hello-world:
+  check-bats-version:
     runs-on: ubuntu-latest
     steps:
-      - name: execute echo command
-        run: echo "Hello World!!!!"
+      - uses: actions/checkout@v2
+      - uses: shivammathur/setup-php@v2
+      - run: echo "Hello World!!!!"
+      - run: php -v
+      - run: php get_file.php
