--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -7,6 +7,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: shivammathur/setup-php@v2
       - run: echo "Hello World!!!!"
-      - run: php -r "echo $_SERVER['DOCUMENT_ROOT'].PHP_EOL;"
+      - run: php -r "echo __FILE__.PHP_EOL;"
       - run: php -v
       - run: php get_file.php
